# positos-backend-app

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  python-install.sh
api/: db.py  main.py  migrate_db.py
api/cruds/: project.py  task.py
api/enum/: task_status
api/models/: project.py  task.py
api/routers/: project.py  task.py
api/schemas/: project.py  task.py
